package com.handmade.ecommerce.analytics.model;

/**
 * Trend - Enum
 * Indicates trending direction
 */
public enum Trend {
    UP,        // Trending up
    DOWN,      // Trending down
    STABLE     // No significant change
}
