package com.handmade.ecommerce.product.model;

import org.chenile.utils.entity.model.AbstractExtendedStateEntity;
public class Product extends AbstractExtendedStateEntity
{
	public String description;
}
