@startuml Complete Integration - Catalog, Promotion, Analytics

!define CATALOG #E1F5FE
!define PROMOTION #FFF3E0
!define ANALYTICS #F3E5F5
!define PRODUCT #FFEBEE
!define EVENT #E8F5E9

skinparam backgroundColor #FEFEFE
skinparam linetype ortho

title Complete Module Integration\nCatalog ↔ Promotion ↔ Analytics

' ==================== PRODUCT MANAGEMENT (External) ====================

package "Product Management\n(External Module)" PRODUCT {
    entity "Product" as product {
        * productId : String
        --
        name : String
        price : BigDecimal
        artisanId : String
    }
}

' ==================== CATALOG MANAGEMENT ====================

package "Catalog Management" CATALOG {
    
    entity "Category" as category {
        * categoryId : String
        --
        name : String
        slug : String
        parentId : String
        featured : Boolean
        displayOrder : Integer
        productCount : Long
    }
    
    entity "Collection" as collection {
        * collectionId : String
        --
        name : String
        type : CollectionType
        startDate : DateTime
        endDate : DateTime
    }
    
    entity "CatalogItem" as catalogItem {
        * catalogItemId : String
        --
        * productId : String
        featured : Boolean
        tags : List<String>
    }
    
    entity "ProductCategoryMapping" as pcm {
        productId : String
        categoryId : String
        isPrimary : Boolean
    }
    
    entity "CollectionProductMapping" as cpm {
        collectionId : String
        productId : String
    }
}

' ==================== PROMOTION MANAGEMENT ====================

package "Promotion Management" PROMOTION {
    
    entity "Promotion" as promotion {
        * promotionId : String
        --
        name : String
        code : String
        targetType : PromotionTargetType
        targetId : String
        discountType : DiscountType
        discountValue : BigDecimal
        startDate : DateTime
        endDate : DateTime
    }
    
    enum "PromotionTargetType" as targetType {
        CATEGORY
        PRODUCT
        COLLECTION
        ARTISAN
        GLOBAL
    }
    
    entity "PromotionUsage" as usage {
        promotionId : String
        customerId : String
        orderId : String
        discountAmount : BigDecimal
    }
}

' ==================== ANALYTICS MANAGEMENT ====================

package "Analytics Management" ANALYTICS {
    
    entity "CategoryAnalytics" as catAnalytics {
        * analyticsId : Long
        --
        categoryId : String
        viewCount : Long
        purchaseCount : Long
        conversionRate : Double
        popularityScore : Integer
        trend : Trend
    }
    
    entity "ProductAnalytics" as prodAnalytics {
        * analyticsId : Long
        --
        productId : String
        viewCount : Long
        purchaseCount : Long
        trendingScore : Integer
        trend : Trend
    }
    
    enum "Trend" as trend {
        UP
        DOWN
        STABLE
    }
}

' ==================== DOMAIN EVENTS ====================

package "Domain Events" EVENT {
    
    class "CategoryViewedEvent" as catViewEvent {
        categoryId : String
        customerId : String
        timestamp : DateTime
    }
    
    class "ProductPurchasedEvent" as prodPurchaseEvent {
        productId : String
        customerId : String
        orderId : String
    }
    
    class "PopularCategoriesCalculatedEvent" as popCatEvent {
        categoryScores : Map<String, PopularityScore>
        calculatedAt : DateTime
    }
}

' ==================== RELATIONSHIPS ====================

' Catalog internal relationships
category ||--o{ category : "parent-child"
product ||--|| catalogItem : "1:1"
product ||--o{ pcm
category ||--o{ pcm
collection ||--o{ cpm
product ||--o{ cpm

' Promotion → Catalog (queries)
promotion ..> category : "<<queries>>\ngetProductsByCategory()"
promotion ..> collection : "<<queries>>\ngetProductsByCollection()"
promotion }o--|| targetType : "has type"

' Analytics → Catalog (tracks)
catAnalytics ..> category : "<<tracks>>\ncategoryId reference"
prodAnalytics ..> product : "<<tracks>>\nproductId reference"
catAnalytics }o--|| trend : "has trend"
prodAnalytics }o--|| trend : "has trend"

' Events → Analytics (consumes)
catViewEvent ..> catAnalytics : "<<updates>>"
prodPurchaseEvent ..> prodAnalytics : "<<updates>>"

' Analytics → Catalog (publishes)
popCatEvent ..> category : "<<updates>>\nfeatured, displayOrder"

' ==================== NOTES ====================

note right of category
  **Catalog provides:**
  - Category structure for Promotion targeting
  - Category structure for Analytics tracking
  
  **Catalog receives:**
  - Popularity updates from Analytics
  - Updates featured status and display order
end note

note right of promotion
  **Integration with Catalog:**
  
  When targetType = CATEGORY:
  1. Query Catalog: getProductsByCategory(targetId)
  2. Apply discount to all returned products
  
  Example:
  - targetType: CATEGORY
  - targetId: "CAT-022" (Pottery)
  - discount: 20%
  
  → Applies to all products in Pottery category
end note

note right of catAnalytics
  **Integration with Catalog:**
  
  1. Track category views/purchases
  2. Calculate popularity score (0-100)
  3. Determine trend (UP/DOWN/STABLE)
  4. Publish PopularCategoriesCalculatedEvent
  
  → Catalog updates featured status
  → Catalog updates display order
end note

note bottom of catViewEvent
  **Event Flow:**
  
  Customer views category
    ↓
  CategoryViewedEvent published
    ↓
  Analytics consumes event
    ↓
  Updates CategoryAnalytics
    ↓
  Calculates popularity
    ↓
  Publishes PopularCategoriesCalculatedEvent
    ↓
  Catalog updates featured status
end note

@enduml
